2005-09-27  Frank Ch. Eigler  <fche@elastic.org>

	PR 1311.
	* tapsets.cxx (target_variable_flavour_calculating_visitor::
	visit_target_symbol): Print verbose error.
	(var_expanding_copy_visitor::visit_target_symbol): Throw
	simple error.
	
2005-09-26  Frank Ch. Eigler  <fche@elastic.org>

	* stapfuncs.5.in: Extend errno_str verbiage.
	* tapset/errno.stp: Canonicalize script code slightly.

2005-09-26  Frank Ch. Eigler  <fche@elastic.org>

	PR 1295.
	* tapsets.cxx (resolve_prologue_endings2): Try another heuristic
	for end-of-prologue.

2005-09-22  Graydon Hoare  <graydon@redhat.com>,
	Frank Ch. Eigler  <fche@elastic.org>

	PR 1330.
	* tapsets.cxx (dwarf_derived_probe): Allow multiple probe_point
	locations per derived_probe.
	(dwarf_query): Add probe "flavour" concept, to reuse probe bodies for
	identical flavours across wildcards.
	(dwarf::emit_registrations, emit_deregistrations, emit_probe_entries):
	Reorganize.
	* staptree (probe::printsig): Put multiple locations on separate lines.

2005-09-22  Will Cohen  <wcohen@redhat.com>

	* stap.1.in: Correct sys_read alias example.

2005-09-19  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (*::emit_probe_entries): Handle busy-count correctly
	upon contention.

2005-09-14  Graydon Hoare  <graydon@redhat.com>

	PR 1260
	* tapsets.cxx (dwflpp::resolve_prologue_endings): Correct logic
	error triggered by consecutive function-beginning line records.

2005-09-14  Frank Ch. Eigler  <fche@elastic.org>

	PR 1344
	* translate.cxx: Call _stp_map_clear for "delete ARRAY" statement.

2005-09-14  Roland McGrath  <roland@redhat.com>

	* systemtap.spec.in: Version 0.4.1 cooked.
	Build runpath into elfutils libs too.

2005-09-14  Frank Ch. Eigler  <fche@elastic.org>

	PR 1257
	* Makefile.am (AM_CFLAGS): Add -fexceptions.
	* loc2c.c (c_translate_location): Invoke *fail properly.
	* Makefile.in: Regenerated.

2005-09-13  Graydon Hoare  <graydon@redhat.com>

	PR 1260
	* tapsets.cxx (func_info::func_info): Initialize fields.